# SPDX-FileCopyrightText: 2023 Kerstin Humm <mail@erictapen.name>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "isre1late-server"
version = "0.1.0"
authors = ["Kerstin Humm <kerstin@erictapen.name>"]

edition = "2021"

[dependencies]
rocket = { version = "*", features = [ "json" ] }
rocket_sync_db_pools = { version = "*", features = [ "diesel_postgres_pool" ] }
reqwest = { version = "*", features = [ "blocking", "json" ] }
diesel = { version = "*", features = [ "postgres", "postgres_backend", "time" ] }
diesel_migrations = { version = "*", features = [ "postgres" ] }
serde_derive = "*"
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
serde_with = "*"
serde_qs = "*"
monostate = "*"
clap = { version = "*", features = [ "derive" ] }
log = "*"
time = { version = "*", features = [ "serde-well-known", "local-offset" ] }
urlencoding = "*"
simple_logger = "*"
systemd-journal-logger = "*"
tungstenite = "*"
threadpool = "*"
indicatif = "*"
num-format = "*"
memuse = "*"
bytefmt = "*"

# This isn't only needed indirectly, but is necessary to fix a nix build failure
# https://github.com/NixOS/nixpkgs/pull/359659#issuecomment-2661028035
pq-sys = { version = "*", features = [ "pkg-config" ] }

[dependencies.bus]
version = "*"
git = "https://github.com/agausmann/bus"
rev = "faca2750f506896417067ee9d02fbd5f4ac55027"

